# pylisticles

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  demo_persistence.py  main.py  pyproject.toml
.claude/: settings.local.json
pylisticles/: __init__.py
pylisticles/data/: __init__.py  persistence.py
pylisticles/models/: __init__.py  collection.py
pylisticles/ui/: __init__.py  app.py
pylisticles/utils/: __init__.py
screenshots/: .gitkeep
tests/: __init__.py  test_models.py  test_persistence.py
